--- a/app/src/main/res/layout/content_activite_test.xml
+++ b/app/src/main/res/layout/content_activite_test.xml
@@ -5,28 +5,11 @@
     android:weightSum="1">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Activité test!!!"
-        android:id="@+id/textView"
-        android:layout_weight="0.20"
-        android:textSize="60dp" />
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bouton1"
+        android:text="Créer parcours"
         android:id="@+id/button1"
-        android:layout_weight="0.20"
-        android:textSize="30dp" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Bouton2"
-        android:id="@+id/button2"
         android:layout_weight="0.20"
         android:textSize="30dp" />
 
