--- a/app/src/main/res/layout/parcours_layout.xml
+++ b/app/src/main/res/layout/parcours_layout.xml
@@ -24,7 +24,8 @@
         android:layout_height="wrap_content"
         android:background="#98FB98"
         android:textColor="#000000"
-        android:textStyle="bold"
+        android:textSize="35dp"
+        android:padding="20dp"
         android:text="Sélectionner"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/description"
@@ -33,7 +34,9 @@
         android:clickable="true"
         android:contextClickable="true"
         android:focusable="true"
-        android:enabled="true" />
+        android:enabled="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
