--- a/app/src/main/res/layout/content_activite_test.xml
+++ b/app/src/main/res/layout/content_activite_test.xml
@@ -8,7 +8,8 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Créer parcours"
+        android:text="Choisir un parcours"
+        android:layout_centerInParent="true"
         android:id="@+id/button1"
         android:layout_weight="0.20"
         android:textSize="30dp" />
