--- a/app/src/main/res/layout/content_lieux.xml
+++ b/app/src/main/res/layout/content_lieux.xml
@@ -24,7 +24,8 @@
         android:id="@+id/parcoursTitle"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="10dp" />
 
     <ExpandableListView
         android:layout_width="wrap_content"
