--- a/app/src/main/res/layout/parcours_layout.xml
+++ b/app/src/main/res/layout/parcours_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:background="#1B4D3E">
+    android:background="#FFFFFF">
 
     <TextView
         android:id="@+id/description"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:background="#98FB98"
         android:textColor="#000000"
-        android:textSize="35dp"
+        android:textSize="25dp"
         android:padding="20dp"
         android:text="Sélectionner"
         android:layout_alignParentBottom="true"
