Ajout de l'activité Information
Ajout d'une activité pour afficher les informations d'un lieu.

--- a/app/src/main/res/layout/activity_lieux.xml
+++ b/app/src/main/res/layout/activity_lieux.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="rocj2405.angers2k16.LieuxActivity">
+    tools:context="com.example.lamas.testdataxml.LieuxActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
