--- a/app/src/main/res/layout/activity_parcours.xml
+++ b/app/src/main/res/layout/activity_parcours.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="rocj2405.angers2K16.ParcoursActivity">
+    tools:context="com.example.lamas.testdataxml.ParcoursActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
