--- a/app/src/main/res/layout/activity_configuration1.xml
+++ b/app/src/main/res/layout/activity_configuration1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.lamas.testdataxml.Configuration1">
+    tools:context=".initial_tests.Configuration1">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
