--- a/app/src/main/res/layout/content_information.xml
+++ b/app/src/main/res/layout/content_information.xml
@@ -29,4 +29,14 @@
         android:layout_gravity="center_horizontal"
         android:layout_below="@+id/nom_lieu" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:enabled="false" />
+
 </RelativeLayout>
