--- a/app/src/main/res/layout/content_information.xml
+++ b/app/src/main/res/layout/content_information.xml
@@ -27,7 +27,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/expandableListView3"
         android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/nom_lieu" />
+        android:layout_below="@+id/nom_lieu"
+        android:layout_above="@+id/continueVisit"/>
 
     <Button
         android:layout_width="match_parent"
@@ -38,6 +39,7 @@
         android:padding="35dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
