--- a/app/src/main/res/layout/content_lieux.xml
+++ b/app/src/main/res/layout/content_lieux.xml
@@ -45,6 +45,7 @@
         android:padding="35dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
